Fixed second exercise.

--- a/Homework/5/5.tex
+++ b/Homework/5/5.tex
@@ -92,9 +92,9 @@
 
 		\begin{itemize}
 			\item \textbf{OX}. Yes, it is possible. For example, let $p_1=123456789$ and $p_2=389456712$. The matching segment is $4567$, so the offspring in the first step would be $---4567--$ and $p_2=389----12$. Then, if we add the alleles to the offspring starting after the ending point of the matching segment we would get $123456789$, which is the first parent.
-			\item \textbf{CX}. It is not possible.
-			\item \textbf{PMX}. It is not possible.
-			\item \textbf{EX}. It is not possible.
+			\item \textbf{CX}. It is possible.
+			\item \textbf{PMX}. It is possible.
+			\item \textbf{EX}. It is possible.
 		\end{itemize}
 
 	\item
