Fixed typo error

--- a/Homework/1/1.tex
+++ b/Homework/1/1.tex
@@ -196,7 +196,7 @@ Course Webpage
 \texttt{http://www.rubicite.com/Tutorials/GeneticAlgorithms.aspx}
 
 \bibitem{Webpage2}
-\texttt{https://towardsdatascience.com/genetic-algorithm-implementation-in-python-5ab67bb124a6}
+\texttt{https://towardsdatascience.com/genetic-algorithm\\-implementation-in-python-5ab67bb124a6}
 
 \bibitem{Webpage3}
 \texttt{https://docs.python.org/3/}
